// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
.emotion-0 {
  margin-top: 32px;
  margin-bottom: 32px;
  font-family: inherit;
  font-size: 32px;
  font-weight: 700;
  line-height: 1.25;
}

.emotion-0 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 48px;
  }
}

<h1
  className="emotion-0"
>
  Hello
</h1>
`;

exports[`renders with wrapper 1`] = `
.emotion-0 {
  margin-top: 32px;
  margin-bottom: 32px;
  font-family: inherit;
  font-size: 32px;
  font-weight: 700;
  line-height: 1.25;
}

.emotion-0 a {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 a:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 48px;
  }
}

.emotion-1 {
  color: #000;
  background-color: #fff;
  font-family: system-ui,sans-serif;
  font-weight: 400;
  line-height: 1.5;
  color: #000;
  background-color: #fff;
  font-family: system-ui,sans-serif;
  font-weight: 400;
  line-height: 1.5;
}

<div
  className="emotion-1"
>
  <h1
    className="emotion-0"
  >
    Hello
  </h1>
</div>
`;
